--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node notes-app/server/app.js "
+    "start": "nodemon notes-app/server/app.js "
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.4.0",
     "koa": "^2.0.0-alpha.8",
     "koa-router": "^7.1.1",
+    "mongoose": "^4.9.5",
     "standard": "^10.0.2"
   }
 }
