--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "koa-router": "^7.1.1",
     "mongoose": "^4.9.5",
     "standard": "^10.0.2"
+  },
+  "dependencies": {
+    "koa-bodyparser": "^3.2.0"
   }
 }
