--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "cross-env": "^4.0.0",
-    "koa-bodyparser": "^3.2.0"
+    "ejs": "^2.5.6",
+    "koa-bodyparser": "^3.2.0",
+    "koa-render": "^0.2.1",
+    "koa-views": "^5.2.1"
   }
 }
