--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_PATH=src/server nodemon src/server/app.js "
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,19 +17,11 @@
     "url": "https://github.com/GennadiyK/spa/issues"
   },
   "homepage": "https://github.com/GennadiyK/spa#readme",
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "koa": "^2.0.0-alpha.8",
-    "koa-router": "^7.1.1",
-    "mongoose": "^4.9.5",
-    "standard": "^10.0.2"
-  },
   "dependencies": {
-    "cross-env": "^4.0.0",
-    "ejs": "^2.5.6",
+    "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^3.2.0",
-    "koa-render": "^0.2.1",
-    "koa-views": "^5.2.1"
+    "koa-ejs": "^4.0.0",
+    "koa-router": "^7.1.1",
+    "koa-static": "^3.0.0"
   }
 }
