--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-bodyparser": "^3.2.0",
     "koa-ejs": "^4.0.0",
     "koa-router": "^7.1.1",
-    "koa-static": "^3.0.0"
+    "koa-static": "^3.0.0",
+    "koa-views": "^5.2.1"
   }
 }
