--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^3.2.0",
     "koa-ejs": "^4.0.0",
+    "koa-json": "^2.0.2",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1"
