--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-json": "^2.0.2",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
-    "koa-views": "^5.2.1"
+    "koa-views": "^5.2.1",
+    "mongoose": "^4.9.8"
   }
 }
