--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "cross-env": "^5.0.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/test"
   },
   "repository": {
     "type": "git",
