--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "async-request": "^1.2.0",
     "cross-env": "^5.0.0",
+    "expect.js": "^0.3.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "should": "^11.2.1"
@@ -12,6 +14,9 @@
   "scripts": {
     "test": "mocha --harmony src/test"
   },
+  "pre-commit": [
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GennadiyK/spa.git"
