--- a/package.json
+++ b/package.json
@@ -35,15 +35,20 @@
   },
   "homepage": "https://github.com/GennadiyK/spa#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^3.2.0",
     "koa-ejs": "^4.0.0",
     "koa-favicon": "^2.0.0",
     "koa-json": "^2.0.2",
+    "koa-passport": "^3.0.0",
     "koa-router": "^7.1.1",
     "koa-session-async": "0.0.2",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
-    "mongoose": "^4.10.4"
+    "mongoose": "^4.10.4",
+    "passport-local": "^1.0.0"
   }
 }
