--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "egs": "^0.3.1",
     "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^3.2.0",
     "koa-ejs": "^4.0.0",
