--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "egs": "^0.3.1",
+    "ejs": "^2.5.6",
     "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^3.2.0",
+    "koa-connect-flash": "^0.1.2",
     "koa-ejs": "^4.0.0",
     "koa-favicon": "^2.0.0",
     "koa-json": "^2.0.2",
