--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/GennadiyK/spa#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^1.0.2",
     "connect-flash": "^0.1.1",
     "ejs": "^2.5.6",
     "koa": "^2.0.0-alpha.8",
@@ -48,6 +48,7 @@
     "koa-session-async": "0.0.2",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "mocha": "^3.4.2",
     "mongoose": "^4.10.4",
     "passport-local": "^1.0.0"
   }
