--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "koa-views": "^5.2.1",
     "mocha": "^3.4.2",
     "mongoose": "^4.11.0",
+    "nodemailer": "^4.0.1",
     "passport-local": "^1.0.0"
   }
 }
