--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^3.4.2",
     "mongoose": "^4.11.0",
     "nodemailer": "^4.0.1",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0"
   }
 }
